--- a/PY0101EN-4-2-WriteFile.ipynb
+++ b/PY0101EN-4-2-WriteFile.ipynb
@@ -156,9 +156,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['This is line A\\n', 'This is line B\\n', 'This is line C\\n']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Sample list of text\n",
     "\n",
@@ -168,9 +179,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is line A\n",
+      "\n",
+      "This is line B\n",
+      "\n",
+      "This is line C\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Write the strings in the list to text file\n",
     "\n",
@@ -189,9 +213,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is line A\n",
+      "This is line B\n",
+      "This is line C\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Verify if writing to file is successfully executed\n",
     "\n",
@@ -208,9 +243,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwrite\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "with open('Example2.txt', 'w') as writefile:\n",
     "    writefile.write(\"Overwrite\\n\")\n",
@@ -235,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,9 +300,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is line A\n",
+      "This is line B\n",
+      "This is line C\n",
+      "This is line C\n",
+      "This is line D\n",
+      "This is line E\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Verify if the new line is in the text file\n",
     "\n",
@@ -295,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -347,30 +405,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Initial Location: 130\n",
+      "Initial Location: 105\n",
       "Read nothing\n",
       "\n",
       "New Location : 0\n",
-      "Line 1\n",
-      "Line 2\n",
-      "Line 3\n",
-      "finished\n",
-      "is line D\n",
-      "This is line E\n",
+      "This is line A\n",
+      "This is line B\n",
+      "This is line C\n",
       "This is line C\n",
       "This is line D\n",
       "This is line E\n",
       "This is line E\n",
-      "This is line E\n",
       "\n",
-      "Location after read: 130\n"
+      "Location after read: 105\n"
      ]
     }
    ],
@@ -407,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -684,14 +738,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The number of rows do not add up. Make sure your final files have the same header and format.\n",
+      "Error\n",
+      "Inactive members in file\n",
       "Test Failed\n"
      ]
     }
@@ -862,7 +917,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.7.12"
   }
  },
  "nbformat": 4,
