--- a/PY0101EN-4.3_notebook_quizz_pandas.ipynb
+++ b/PY0101EN-4.3_notebook_quizz_pandas.ipynb
@@ -25,13 +25,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df=pd.DataFrame({'a':[11,21,31],'b':[21,22,23]})\n"
+    "df=pd.DataFrame({'a':[11,21,31],'b':[21,22,23]})"
    ]
   },
   {
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
        "2  31  23"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +233,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.7.12"
   }
  },
  "nbformat": 4,
