--- a/Virtualizacion.ipynb
+++ b/Virtualizacion.ipynb
@@ -7,21 +7,22 @@
    "source": [
     "# Virtualizar python\n",
     "Programa para virtualizar\n",
-    "\n",
+    "```sh\n",
     "    sudo apt install -y python3-venv\n",
-    "\n",
+    "```\n",
     "EL comando para virtualizar un proyecto es\n",
-    "\n",
+    "```sh\n",
     "    pwd\n",
     "    python3 -m venv my-env\n",
-    "\n",
+    "```\n",
     "Se creara una carpeta con el nombre que se coloco (my-env), para activar se usa el siguiente comando\n",
-    "\n",
+    "```sh\n",
     "    source my-env/bin/activate\n",
-    "\n",
+    "```\n",
     "Para desactivar la virtualizacion\n",
-    "\n",
-    "    deactivate"
+    "```sh\n",
+    "    deactivate\n",
+    "```"
    ]
   },
   {
@@ -32,13 +33,63 @@
     "# Requirements\n",
     "Archivo que lista todas las dependencias que usa el proyecto\n",
     "Crear el archivo\n",
-    "\n",
+    "```sh\n",
     "    pip3 freeze > requirements.txt\n",
-    "\n",
+    "```\n",
     "Para instalar las depedencias del archivo\n",
-    "\n",
-    "    pip3 install -r requirements.txt"
+    "```sh\n",
+    "    pip3 install -r requirements.txt\n",
+    "```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f6a4d8a",
+   "metadata": {},
+   "source": [
+    "# Docker\n",
+    "Se requiere crear el programa Dockerfile\n",
+    "```sh\n",
+    "    FROM python:3.8\n",
+    "\n",
+    "    WORKDIR /app\n",
+    "    COPY requirements.txt /app/requirements.txt\n",
+    "\n",
+    "    RUN pip install --no-cache-dir --upgrade -r /app/requirements.txt\n",
+    "\n",
+    "    COPY . / app/\n",
+    "\n",
+    "    CMD bash -c \"while true; do sleep 1; done\"\n",
+    "```\n",
+    "- FROM: nos proporciona una imagen base con ubuntu:18.04.\n",
+    "- COPY: añade archivos desde nuestro directorio local.\n",
+    "- RUN: crea la aplicación con make.ubuntu:18.04\n",
+    "- CMD: specifica que comandos queremos ejecutar en el contenedor.\n",
+    "\n",
+    "## Comandos\n",
+    "Construir el contenedor\n",
+    "```sh\n",
+    "docker compose build\n",
+    "```\n",
+    "Para lanzar y iniciar el contenedor\n",
+    "```sh\n",
+    "docker compose up -d\n",
+    "```\n",
+    "Para ver el estado del contenedor\n",
+    "```sh\n",
+    "docker compose ps\n",
+    "```\n",
+    "Para ingresar al ambiente\n",
+    "```sh\n",
+    "docker compose exec app-csv bash\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "13976ff9",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
