Enlazar con docker

--- a/Virtualizacion.ipynb
+++ b/Virtualizacion.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f6a4d8a",
+   "id": "4db158ae",
    "metadata": {},
    "source": [
     "# Docker\n",
@@ -82,12 +82,17 @@
     "Para ingresar al ambiente\n",
     "```sh\n",
     "docker compose exec app-csv bash\n",
+    "```\n",
+    "Un comando util para enlazar archivos con el contenedor\n",
+    "```sh\n",
+    "volumes:\n",
+    "      - .:/app\n",
     "```"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "13976ff9",
+   "id": "edc9120b",
    "metadata": {},
    "source": []
   }
