--- a/Virtualizacion.ipynb
+++ b/Virtualizacion.ipynb
@@ -2,6 +2,25 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "ab2e6ab4",
+   "metadata": {},
+   "source": [
+    "# PIP\n",
+    "Comando para instalar\n",
+    "```sh\n",
+    "pip install matplotlib\n",
+    "```\n",
+    "Comando para ver las librerias con versiones\n",
+    "```sh\n",
+    "pip3 freeze\n",
+    "```\n",
+    "\n",
+    "```sh\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a0a2b856",
    "metadata": {},
    "source": [
@@ -44,7 +63,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4db158ae",
+   "id": "430574ae",
    "metadata": {},
    "source": [
     "# Docker\n",
@@ -92,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "edc9120b",
+   "id": "68daf7f0",
    "metadata": {},
    "source": []
   }
