--- a/Poo Python.ipynb
+++ b/Poo Python.ipynb
@@ -285,6 +285,74 @@
     "\n",
     "![image.png](attachment:image.png)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4f9e6f8a",
+   "metadata": {},
+   "source": [
+    "# Busqueda Lineal\n",
+    "Busca en todos los elementos de manera secuencial\n",
+    "\n",
+    "# Busqueda binaria\n",
+    "- Divide y conquista\n",
+    "- El problema se divide en 2 en cada iteracion\n",
+    "- Cual es el peor caso?\n",
+    "\n",
+    "# Ordenamiento de burbuja\n",
+    "El ordenamiento de burbuja es un algoritmo que recorre repetidamente una lista que necesita ordenarse. Compara elementos adyacentes y los intercambia si estan en el orden incorrecto. Este procedimiento se repite hasta que no se requieren mas intercambios, lo que indica que la lista se encuentra ordenada \n",
+    "\n",
+    "# Ordenamiento por inserción\n",
+    "Una lista es dividida entre una sublista ordenada y otra sublista desordenada.\n",
+    "Al principio, la sublista ordenada contiene un solo elemento, por lo que por\n",
+    "definición se encuentra ordenada.\n",
+    "1. A continuación se evalua el primer elemento dentro la sublista desordenada para que podamos insertarlo en el lugar correcto dentro de la lista ordenada.\n",
+    "\n",
+    "2. La inserción se realiza al mover todos los elementos mayores al elemento que se está evaluando un lugar a la derecha.\n",
+    "\n",
+    "3. Continua el proceso hasta que la sublista desordenada quede vacia y, por lo tanto, la lista se encontrará ordenada.\n",
+    "\n",
+    "![SortUrl](https://upload.wikimedia.org/wikipedia/commons/thumb/0/0f/Insertion-sort-example-300px.gif/250px-Insertion-sort-example-300px.gif \"sort\")\n",
+    "\n",
+    "Veamos un ejemplo:\n",
+    "\n",
+    "1. Imagina que tienes la siguiente lista de números:\n",
+    "        \n",
+    "        7, 3, 2, 9, 8\n",
+    "\n",
+    "2. Primero añadimos 7 a la sublista ordenada:\n",
+    "\n",
+    "        7, 3, 2, 9, 8\n",
+    "\n",
+    "3. Ahora vemos el primer elemento de la sublista desordenada y lo guardamos en una variable para mantener el valor. A esa variable la llamaremos <strong>valor_actual</strong>. Verificamos que 3 es menor que 7, por lo que movemos 7 un lugar a la derecha.\n",
+    "        \n",
+    "        7, 7, 2, 9, 8 (valor_actual=3)\n",
+    "\n",
+    "4. 3 es menor que 7, por lo que insertamos el valor en la primera posición.\n",
+    "\n",
+    "        3, 7, 2, 9, 8\n",
+    "\n",
+    "5. Ahora vemos el número 2. 2 es menor que 7 por lo que lo movemos un espacio a la derecha y hacemos lo mismo con 3.\n",
+    "        \n",
+    "        3, 3, 7, 9, 8 (valor_actual=2)\n",
+    "\n",
+    "6. Ahora insertamos 2 en la primera posición.\n",
+    "\n",
+    "        2, 3, 7, 9, 8\n",
+    "\n",
+    "7. 9 es más grande que el valor más grande de nuestra sublista ordenada por lo que lo insertamos directamente en su posición.\n",
+    "    \n",
+    "        2, 3, 7, 9, 8\n",
+    "\n",
+    "8. El último valor es 8. 9 es más grande que 8 por lo que lo movemos a la derecha:\n",
+    "\n",
+    "        2, 3, 7, 9, 9 (valor_actual=8)\n",
+    "\n",
+    "9. 8 es más grande que 7, por lo que procedemos a insertar nuestro valor_actual.\n",
+    "\n",
+    "        2, 3, 7, 8, 9\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
