Ordenanza por mezcla

--- a/Poo Python.ipynb
+++ b/Poo Python.ipynb
@@ -353,6 +353,16 @@
     "        2, 3, 7, 8, 9\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "82afafca",
+   "metadata": {},
+   "source": [
+    "# Ordenamiento por mezcla\n",
+    "Es un algoritmo de divide y conquista. Primero divide una lista en partes iguales hasta que quedan sublistas de 1 o 0 elementos. Luego las recombina en forma ordenada\n",
+    "![SortUrl](https://upload.wikimedia.org/wikipedia/commons/c/cc/Merge-sort-example-300px.gif \"sort\")"
+   ]
   }
  ],
  "metadata": {
