--- a/Poo Python.ipynb
+++ b/Poo Python.ipynb
@@ -363,6 +363,37 @@
     "Es un algoritmo de divide y conquista. Primero divide una lista en partes iguales hasta que quedan sublistas de 1 o 0 elementos. Luego las recombina en forma ordenada\n",
     "![SortUrl](https://upload.wikimedia.org/wikipedia/commons/c/cc/Merge-sort-example-300px.gif \"sort\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7cdf8496",
+   "metadata": {},
+   "source": [
+    "# Virtualizacion \n",
+    "- Permiten aislar el ambiente para poder instalar diversas versiones de paquetes\n",
+    "- A partir de python 3 se incluye en la libreria estandar en el modulo venv\n",
+    "- Ningun ingeniero profesional de Python trabaja sin ellos\n",
+    "\n",
+    "## PIP\n",
+    "- Permite descargar paquetes de terceros para utilizar en nuestro programa\n",
+    "- Permite compartir nuestros paquetes con terceros\n",
+    "- Permite especificar la version del paquete que necesitamos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "abf42846",
+   "metadata": {},
+   "source": [
+    "# Introducción a la optimización\n",
+    "- Permite resolver muchos problemas de manera computacional\n",
+    "- Una funcion objetivo que debemos maximizar o minimizar\n",
+    "- Una serie de limitantes que debemos respetar\n",
+    "\n",
+    "# Turing Award\n",
+    "\n",
+    "# Problema del morral\n"
+   ]
   }
  ],
  "metadata": {
