--- a/NUMPY/avanzado/02.arrays.ipynb
+++ b/NUMPY/avanzado/02.arrays.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,27 +111,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[1., 1., 1., 1., 1.],\n",
-       "       [1., 1., 1., 1., 1.],\n",
-       "       [1., 1., 1., 1., 1.],\n",
-       "       [1., 1., 1., 1., 1.],\n",
-       "       [1., 1., 1., 1., 1.],\n",
-       "       [1., 1., 1., 1., 1.],\n",
-       "       [1., 1., 1., 1., 1.],\n",
-       "       [1., 1., 1., 1., 1.],\n",
-       "       [1., 1., 1., 1., 1.],\n",
-       "       [1., 1., 1., 1., 1.]])"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'np' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# Ones\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m np\u001b[39m.\u001b[39mones((\u001b[39m10\u001b[39m,\u001b[39m5\u001b[39m))\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
+     ]
     }
    ],
    "source": [
@@ -141,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +143,7 @@
        "        5.55555556,  6.66666667,  7.77777778,  8.88888889, 10.        ])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +167,7 @@
        "       [0., 0., 0., 1.]])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,16 +179,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.34198709599119237"
+       "0.8383225075388322"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,16 +200,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.82041694, 0.14605399, 0.77178078, 0.24514233])"
+       "array([0.94792717, 0.40734245, 0.5333278 , 0.52265887])"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,19 +221,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.98344427, 0.73056539, 0.18023126, 0.29866656],\n",
-       "       [0.61528126, 0.60110116, 0.67825204, 0.83425157],\n",
-       "       [0.10213838, 0.81197696, 0.83329492, 0.25239849],\n",
-       "       [0.25767269, 0.14636547, 0.1687148 , 0.31042241]])"
+       "array([[0.52841835, 0.78369244, 0.04903241, 0.907164  ],\n",
+       "       [0.05165986, 0.80971863, 0.20334604, 0.46492778],\n",
+       "       [0.68208256, 0.38738565, 0.14864396, 0.67448916],\n",
+       "       [0.6096003 , 0.73209975, 0.15379366, 0.30549356]])"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,16 +245,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "13"
+       "12"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,25 +266,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[82, 26, 27, 27, 83, 89, 12, 79, 80, 93],\n",
-       "       [ 6,  9, 31, 79, 53, 48, 84, 94, 56, 77],\n",
-       "       [ 6, 62, 51, 85, 55, 74, 71, 37, 95, 48],\n",
-       "       [83, 10, 69, 25,  1, 27, 74, 85, 46, 14],\n",
-       "       [95, 27, 97, 31, 88, 57,  8, 64, 42, 45],\n",
-       "       [92, 84, 57, 91, 43, 10, 44, 54, 34, 34],\n",
-       "       [64, 36, 10, 85, 58, 79, 46, 32, 83, 32],\n",
-       "       [52, 98, 14, 40, 56, 66, 31, 19, 97, 59],\n",
-       "       [75,  3, 62, 82, 45, 68, 52, 39, 59, 71],\n",
-       "       [47, 63, 46, 19, 64, 69, 69, 35, 24, 28]])"
+       "array([[68, 72, 77,  9, 81, 88,  2, 23, 92, 94],\n",
+       "       [ 9, 83, 64, 42, 38,  9, 14, 56, 55, 50],\n",
+       "       [ 2,  7, 72, 97, 61, 14, 45, 23, 74, 34],\n",
+       "       [55, 61, 15, 29, 74, 72, 13, 68, 84, 96],\n",
+       "       [72, 90, 13, 84, 98, 26, 79, 73, 54, 72],\n",
+       "       [42, 38, 83, 75, 54, 55, 29, 43, 20, 66],\n",
+       "       [67, 95, 11, 64, 91, 85, 35, 73, 12, 19],\n",
+       "       [ 8, 59, 49, 34, 26, 10, 92, 87, 62, 65],\n",
+       "       [65, 89, 50, 67, 30, 62, 24, 41, 38, 39],\n",
+       "       [ 2, 70,  7, 17, 26, 59, 16, 82,  2,  1]])"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
