--- a/NUMPY/avanzado/03.shape_y_reshape.ipynb
+++ b/NUMPY/avanzado/03.shape_y_reshape.ipynb
@@ -1,161 +1,75 @@
 {
  "cells": [
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "70831a74",
-   "metadata": {},
-   "source": [
-    "# Tipos de datos"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "1b76bc03",
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dtype('int64')"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "\n",
-    "arr = np.array([1,2,3,4])\n",
-    "arr.dtype"
+    "# Shape y reshape"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c9dd1858",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dtype('float64')"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "arr = np.array([1,2,3,4], dtype=\"float64\")\n",
-    "arr.dtype"
+    "import numpy as np\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "530277a9",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1., 2., 3., 4.])"
+       "array([[6, 1],\n",
+       "       [7, 2],\n",
+       "       [1, 5]])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "arr = np.random.randint(1,10,(3,2))\n",
     "arr"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "9429c929",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1., 2., 3., 4.])"
+       "(3, 2)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Conversion\n",
-    "arr = np.array([1,2,3,4])\n",
-    "arr_fl64 = arr.astype(np.float64)\n",
-    "arr_fl64"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "49946e4a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ True,  True,  True,  True])"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Conversion boolean\n",
-    "arr_bool = arr.astype(np.bool_)\n",
-    "arr_bool"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "d544246c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([b'1', b'2', b'3', b'4'], dtype='|S21')"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Conversion String\n",
-    "arr_str = arr.astype(np.string_)\n",
-    "arr_str"
+    "arr.shape  # Give the shape "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "bbadfa64",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1, 2, 3, 4], dtype=int8)"
+       "array([[6, 1, 7, 2, 1, 5]])"
       ]
      },
      "execution_count": 16,
@@ -164,10 +78,114 @@
     }
    ],
    "source": [
-    "# Conversion Integer\n",
-    "arr_str = np.array([\"1\",\"2\",\"3\",\"4\"])\n",
-    "arr = arr_str.astype(np.int8)\n",
+    "arr.reshape(1,6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[6, 1, 7],\n",
+       "       [2, 1, 5]])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr.reshape(2,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[6, 1],\n",
+       "       [7, 2],\n",
+       "       [1, 5]])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[6, 1, 7],\n",
+       "       [2, 1, 5]])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Ordenar por lenguaje de programacion\n",
+    "np.reshape(arr,(2,3),'C') # Lenguaje C"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[6, 1, 2],\n",
+       "       [7, 1, 5]])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.reshape(arr, (2,3), 'F') # Lenguaje F"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[6, 1, 7],\n",
+       "       [2, 1, 5]])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    " np.reshape(arr, (2,3),'A')  # Por el tipo de guardado de datos en el sistema, En este caso es del tipo 'C'"
    ]
   }
  ],
@@ -187,8 +205,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.16 (main, Jan 11 2023, 16:05:54) \n[GCC 11.2.0]"
   },
+  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "8774d1c108ba2c4e66a48cedc9122600b0b789622c9e14bae49099cba0407836"
@@ -196,5 +215,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat_minor": 2
 }
