--- a/NUMPY/basico/06.Condiciones.ipynb
+++ b/NUMPY/basico/06.Condiciones.ipynb
@@ -114,27 +114,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([  1.        ,   6.21052632,  11.42105263,  16.63157895,\n",
-       "        21.84210526,  27.05263158,  32.26315789,  37.47368421,\n",
-       "        42.68421053,  47.89473684,  53.10526316,  58.31578947,\n",
-       "        63.52631579,  68.73684211,  73.94736842,  79.15789474,\n",
-       "        84.36842105,  89.57894737,  94.78947368, 100.        ])"
+       "array([ 1.        ,  6.21052632, 11.42105263, 16.63157895, 21.84210526,\n",
+       "       27.05263158, 32.26315789, 37.47368421, 42.68421053, 47.89473684])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "a = np.linspace(1,100,20,dtype=\"float\")\n",
-    "a"
+    "a[(a<50)]"
    ]
   }
  ],
