--- a/PANDAS/basico/04.valoresNulos.ipynb
+++ b/PANDAS/basico/04.valoresNulos.ipynb
@@ -5,7 +5,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Manejo de valores nulos"
+    "# Manejo de valores nulos\n",
+    "```sh\n",
+    "# Es null\n",
+    "df.isnull()\n",
+    "# En valores 0 y 1\n",
+    "df.isnull()*1\n",
+    "```\n",
+    "```sh\n",
+    "# Uso de string\n",
+    "df.fillna('missing')\n",
+    "```\n",
+    "```sh\n",
+    "# Uso de la media\n",
+    "df.fillna(df.mean())\n",
+    "```\n",
+    "```sh\n",
+    "# Interpolacion\n",
+    "df.interpolate()\n",
+    "```\n",
+    "```sh\n",
+    "# Eliminacion de nulos\n",
+    "df.dropna()\n",
+    "```"
    ]
   },
   {
@@ -233,61 +255,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>col1</th>\n",
-       "      <th>col2</th>\n",
-       "      <th>col3</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>a</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>c</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   col1  col2 col3\n",
-       "0   1.0   4.0    a\n",
-       "2   3.0   6.0    c"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# Eliminacion de nulos\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m df\u001b[39m.\u001b[39mdropna()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
     }
    ],
    "source": [
