--- a/PANDAS/basico/02.loc_iloc.ipynb
+++ b/PANDAS/basico/02.loc_iloc.ipynb
@@ -5,7 +5,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# LOC Y ILOC"
+    "# LOC Y ILOC\n",
+    "```sh\n",
+    "# loc\n",
+    "df.loc[0:4]\n",
+    "df.loc[:, ['Name', 'Author']]\n",
+    "df.loc[:, ['Price']]+1\n",
+    "df.loc[:5, ['Author']] == 'JJ Smith'\n",
+    "```\n",
+    "```sh\n",
+    "# iloc\n",
+    "df.iloc[:,0:3]\n",
+    "df.iloc[2,3] +10\n",
+    "df.iloc[:2,2:]\n",
+    "```"
    ]
   },
   {
@@ -320,7 +333,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py39",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -334,12 +347,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "8774d1c108ba2c4e66a48cedc9122600b0b789622c9e14bae49099cba0407836"
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
    }
   }
  },
