--- a/PANDAS/basico/03.agregar_eliminar.ipynb
+++ b/PANDAS/basico/03.agregar_eliminar.ipynb
@@ -5,7 +5,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Agregar y Eliminar"
+    "# Agregar y Eliminar\n",
+    "```sh\n",
+    "# Eliminar \n",
+    "# Metodo 1\n",
+    "df.drop('Genre', axis=1, inplace=True)\n",
+    "# Metodo 2\n",
+    "df = df.drop('Year', axis=1)\n",
+    "# Metodo 3\n",
+    "del df['Price']\n",
+    "# Borrar columnas\n",
+    "df.drop(0, axis=0, inplace=True)\n",
+    "```\n",
+    "```sh\n",
+    "# Agregar valores\n",
+    "df['New Column'] = np.nan\n",
+    "# Valor del shape\n",
+    "df.shape[0]\n",
+    "df['New Column 2'] = np.random.randint(0, 10, df.shape[0])\n",
+    "# Agregar filas\n",
+    "df.append(df)\n",
+    "```"
    ]
   },
   {
@@ -742,201 +762,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Author</th>\n",
-       "      <th>User Rating</th>\n",
-       "      <th>Reviews</th>\n",
-       "      <th>New Column</th>\n",
-       "      <th>New Column 2</th>\n",
-       "      <th>New Column 3</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>11/22/63: A Novel</td>\n",
-       "      <td>Stephen King</td>\n",
-       "      <td>4.6</td>\n",
-       "      <td>2052</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>12 Rules for Life: An Antidote to Chaos</td>\n",
-       "      <td>Jordan B. Peterson</td>\n",
-       "      <td>4.7</td>\n",
-       "      <td>18979</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>6</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1984 (Signet Classics)</td>\n",
-       "      <td>George Orwell</td>\n",
-       "      <td>4.7</td>\n",
-       "      <td>21424</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>7</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5,000 Awesome Facts (About Everything!) (Natio...</td>\n",
-       "      <td>National Geographic Kids</td>\n",
-       "      <td>4.8</td>\n",
-       "      <td>7665</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>A Dance with Dragons (A Song of Ice and Fire)</td>\n",
-       "      <td>George R. R. Martin</td>\n",
-       "      <td>4.4</td>\n",
-       "      <td>12643</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>9</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>545</th>\n",
-       "      <td>Wrecking Ball (Diary of a Wimpy Kid Book 14)</td>\n",
-       "      <td>Jeff Kinney</td>\n",
-       "      <td>4.9</td>\n",
-       "      <td>9413</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>9</td>\n",
-       "      <td>544</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>546</th>\n",
-       "      <td>You Are a Badass: How to Stop Doubting Your Gr...</td>\n",
-       "      <td>Jen Sincero</td>\n",
-       "      <td>4.7</td>\n",
-       "      <td>14331</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>5</td>\n",
-       "      <td>545</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>547</th>\n",
-       "      <td>You Are a Badass: How to Stop Doubting Your Gr...</td>\n",
-       "      <td>Jen Sincero</td>\n",
-       "      <td>4.7</td>\n",
-       "      <td>14331</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>6</td>\n",
-       "      <td>546</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>548</th>\n",
-       "      <td>You Are a Badass: How to Stop Doubting Your Gr...</td>\n",
-       "      <td>Jen Sincero</td>\n",
-       "      <td>4.7</td>\n",
-       "      <td>14331</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2</td>\n",
-       "      <td>547</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>549</th>\n",
-       "      <td>You Are a Badass: How to Stop Doubting Your Gr...</td>\n",
-       "      <td>Jen Sincero</td>\n",
-       "      <td>4.7</td>\n",
-       "      <td>14331</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>4</td>\n",
-       "      <td>548</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>549 rows × 7 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                  Name  \\\n",
-       "1                                    11/22/63: A Novel   \n",
-       "2              12 Rules for Life: An Antidote to Chaos   \n",
-       "3                               1984 (Signet Classics)   \n",
-       "4    5,000 Awesome Facts (About Everything!) (Natio...   \n",
-       "5        A Dance with Dragons (A Song of Ice and Fire)   \n",
-       "..                                                 ...   \n",
-       "545       Wrecking Ball (Diary of a Wimpy Kid Book 14)   \n",
-       "546  You Are a Badass: How to Stop Doubting Your Gr...   \n",
-       "547  You Are a Badass: How to Stop Doubting Your Gr...   \n",
-       "548  You Are a Badass: How to Stop Doubting Your Gr...   \n",
-       "549  You Are a Badass: How to Stop Doubting Your Gr...   \n",
-       "\n",
-       "                       Author  User Rating  Reviews  New Column  New Column 2  \\\n",
-       "1                Stephen King          4.6     2052         NaN             0   \n",
-       "2          Jordan B. Peterson          4.7    18979         NaN             6   \n",
-       "3               George Orwell          4.7    21424         NaN             7   \n",
-       "4    National Geographic Kids          4.8     7665         NaN             3   \n",
-       "5         George R. R. Martin          4.4    12643         NaN             9   \n",
-       "..                        ...          ...      ...         ...           ...   \n",
-       "545               Jeff Kinney          4.9     9413         NaN             9   \n",
-       "546               Jen Sincero          4.7    14331         NaN             5   \n",
-       "547               Jen Sincero          4.7    14331         NaN             6   \n",
-       "548               Jen Sincero          4.7    14331         NaN             2   \n",
-       "549               Jen Sincero          4.7    14331         NaN             4   \n",
-       "\n",
-       "     New Column 3  \n",
-       "1               0  \n",
-       "2               1  \n",
-       "3               2  \n",
-       "4               3  \n",
-       "5               4  \n",
-       "..            ...  \n",
-       "545           544  \n",
-       "546           545  \n",
-       "547           546  \n",
-       "548           547  \n",
-       "549           548  \n",
-       "\n",
-       "[549 rows x 7 columns]"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# Indica cuantos registros se tiene\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m df\u001b[39m.\u001b[39mshape[\u001b[39m0\u001b[39m]\n\u001b[1;32m      3\u001b[0m df[\u001b[39m'\u001b[39m\u001b[39mNew Column 2\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mrandom\u001b[39m.\u001b[39mrandint(\u001b[39m0\u001b[39m, \u001b[39m10\u001b[39m, df\u001b[39m.\u001b[39mshape[\u001b[39m0\u001b[39m])\n\u001b[1;32m      4\u001b[0m df[\u001b[39m'\u001b[39m\u001b[39mNew Column 3\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marange(\u001b[39m0\u001b[39m, df\u001b[39m.\u001b[39mshape[\u001b[39m0\u001b[39m])\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
     }
    ],
    "source": [
@@ -1184,7 +1022,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16 (main, Jan 11 2023, 16:05:54) \n[GCC 11.2.0]"
+   "version": "3.9.16"
   },
   "orig_nbformat": 4,
   "vscode": {
