--- a/PANDAS/basico/08.concatMergeJoin.ipynb
+++ b/PANDAS/basico/08.concatMergeJoin.ipynb
@@ -26,8 +26,19 @@
     "izq.merge(der, on='key')  # Especifica columna\n",
     "izq.merge(der, left_on='key', right_on='key 2')\n",
     "\n",
-    "izq.merge(der, left_on='key', right_on='key 2', how='left')   # union izquierda\n",
-    "izq.merge(der, left_on='key', right_on='key 2', how='right')   # union derecha\n",
+    "izq.merge(der, left_on='key', right_on='key 2', how='left')  # union izq\n",
+    "izq.merge(der, left_on='key', right_on='key 2', how='right')  # union der\n",
+    "```\n",
+    "\n",
+    "```sh\n",
+    "# Join\n",
+    "izq.join(der, how='inner')  # Intercepcion\n",
+    "\n",
+    "izq.join(der, how='left')  # Left\n",
+    "\n",
+    "izq.join(der, how='right')  # Right\n",
+    "\n",
+    "izq.join(der, how='outer')  # Union\n",
     "```"
    ]
   },
@@ -698,6 +709,65 @@
     "print(\"Merge sin nan\\n\", izq.merge(der, left_on='key', right_on='key 2'))\n",
     "print(\"Merge solo de izquierda\\n\", izq.merge(der, left_on='key', right_on='key 2', how='left'))\n",
     "print(\"Merge solo de derecha\\n\", izq.merge(der, left_on='key', right_on='key 2', how='right'))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Join"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Intercepcion\n",
+      "      A   B   C   D\n",
+      "k0  A0  B0  C0  D0\n",
+      "k2  A2  B2  C1  D1\n",
+      "k3  A3  B3  C2  D2\n",
+      "Left\n",
+      "      A   B    C    D\n",
+      "k0  A0  B0   C0   D0\n",
+      "k1  A1  B1  NaN  NaN\n",
+      "k2  A2  B2   C1   D1\n",
+      "k3  A3  B3   C2   D2\n",
+      "Right\n",
+      "       A    B   C   D\n",
+      "k0   A0   B0  C0  D0\n",
+      "k2   A2   B2  C1  D1\n",
+      "k3   A3   B3  C2  D2\n",
+      "k4  NaN  NaN  C3  D3\n",
+      "Union\n",
+      "       A    B    C    D\n",
+      "k0   A0   B0   C0   D0\n",
+      "k1   A1   B1  NaN  NaN\n",
+      "k2   A2   B2   C1   D1\n",
+      "k3   A3   B3   C2   D2\n",
+      "k4  NaN  NaN   C3   D3\n"
+     ]
+    }
+   ],
+   "source": [
+    "izq = pd.DataFrame({'A':['A0','A1','A2','A3'],\n",
+    "'B':['B0','B1','B2','B3']}, index=['k0','k1','k2','k3'])\n",
+    "\n",
+    "der = pd.DataFrame({'C':['C0','C1','C2','C3'],\n",
+    "'D':['D0','D1','D2','D3']}, index=['k0','k2','k3','k4'])\n",
+    "\n",
+    "# join hacer la union por los indices\n",
+    "# izq.join(der)\n",
+    "print('Intercepcion\\n',izq.join(der, how='inner'))\n",
+    "print('Left\\n',izq.join(der, how='left'))\n",
+    "print('Right\\n',izq.join(der, how='right'))\n",
+    "print('Union\\n',izq.join(der, how='outer'))"
    ]
   }
  ],
