--- a/init.ipynb
+++ b/init.ipynb
@@ -8,12 +8,16 @@
     "# CHARACTER CLASSES\n",
     "|Name|Sign|Description|\n",
     "|---|---|---|\n",
-    "|dot|(.)|Matches any character except linebreaks. Equivalent to [^\\n\\r].|\n",
-    "|digit|\\d|Matches any digit character (0-9). Equivalent to [0-9].|\n",
-    "|word|\\w|Matches any word character (alphanumeric & underscore). Only matches low-ascii characters (no accented or non-roman characters). Equivalent to [A-Za-z0-9_]|\n",
-    "|match any|\\s|Detecta Espacios; A character set that can be used to match any character, including line breaks, without the dotall flag (s).|\n",
-    "|range|[a-z]|Matches a character having a character code between the two specified characters inclusive.|\n",
-    "|only dot|\\\\.|Seleciona los puntos|"
+    "|`dot`|(.)|Matches any character except linebreaks. Equivalent to [^\\n\\r].|\n",
+    "|`digit`|\\d|Matches any digit character (0-9). Equivalent to [0-9].|\n",
+    "|`word`|\\w|Matches any word character (alphanumeric & underscore). Only matches low-ascii characters (no accented or non-roman characters). Equivalent to [A-Za-z0-9_]|\n",
+    "|`whitespace`|\\s|Matches any whitespace character (spaces, tabs, line breaks).|\n",
+    "|`range`|[a-z]|Matches a character having a character code between the two specified characters inclusive.|\n",
+    "|`only dot`|\\\\.|Seleciona los puntos|\n",
+    "|`not word`|\\W|Matches any character that is not a word character (alphanumeric & underscore). Equivalent to [^A-Za-z0-9_]|\n",
+    "|`not digit`|\\D|Matches any character that is not a digit character (0-9). Equivalent to [^0-9].|\n",
+    "|`not whitespace`|\\S|Matches any character that is not a whitespace character (spaces, tabs, line breaks).|\n",
+    "|`negated set`|[^ABC]|Match any character that is not in the set.|"
    ]
   },
   {
