--- a/init.ipynb
+++ b/init.ipynb
@@ -48,15 +48,79 @@
    "metadata": {},
    "source": [
     "# EJEMPLOS\n",
-    "- 5556581111\n",
-    "- 56-58-11-12-90\n",
-    "- 56.58.11.12.90\n",
-    "- 56 58 11 12 90\n",
+    "``` python\n",
+    "5556581111\n",
+    "56-58-11-12-90\n",
+    "56.58.11.12.90\n",
+    "56 58 11 12 90\n",
+    "45a65b84e56u88\n",
     "\n",
-    "```code\n",
-    "(\\d{2,2}[\\-\\.]?){5}\n",
-    "(\\d{2,2}[\\-\\.\\s]?){5}\n",
-    "```\n"
+    "# (\\d{2,2}[\\-\\.]?){5}\n",
+    "# (\\d{2,2}[\\-\\.\\s]?){5}\n",
+    "# (\\d{2,2}\\W){4,4}\\d+$\n",
+    "```\n",
+    "\n",
+    "```python  \n",
+    "csv1,csv2,csv3,csv4\n",
+    "4687,1254,1357,4896\n",
+    "a4s,aw4,aw8,a65\n",
+    "\n",
+    "# ^(\\w+,){2,}\\w+$\n",
+    "```\n",
+    "\n",
+    "\n",
+    "```python\n",
+    "555658\n",
+    "56-58-11\n",
+    "56.58.11\n",
+    "56.78-98\n",
+    "65 09 87\n",
+    "76y87r98\n",
+    "45y78-56\n",
+    "78.87 65\n",
+    "78 54-56\n",
+    "+521565811\n",
+    "\n",
+    "# ^\\+?(\\d{2,3}[^\\da-z]?){2}\\d+$\n",
+    "```\n",
+    "\n",
+    "```python \n",
+    "url: https://www.instagram.com/p/BXB4zsUlW5Z/?taken-by=beco.mx\n",
+    "url: http://itam.mx/test\n",
+    "https://github.com/rogerreys/Python_Topics\n",
+    "https://chat.openai.com/auth/login?next=%2F\n",
+    "https://regexr.com/\n",
+    "https://www.freecodecamp.org/news/how-to-format-code-in-markdown/\n",
+    "https://test.test/ test\n",
+    "\n",
+    "# https?:\\/\\/[\\w\\.]+\\.\\w{2,5}?\\/\n",
+    "```\n",
+    "\n",
+    "\n",
+    "```python\n",
+    "test@test.com\n",
+    "anime@hotmail.com\n",
+    "dominio.com\n",
+    "esto.es_un.mail@mail.com\n",
+    "esto.es_un.mail+complejo@mail.com\n",
+    "dominio.com\n",
+    "rodrigo.jimenez@yahoo.com.mx\n",
+    "ruben@starbucks.com\n",
+    "esto_no$es_email@dominio.com\n",
+    "no_se_de_internet3@hotmail.com\n",
+    "\n",
+    "# [\\w\\.\\-\\+]{5,30}@[\\w\\.\\-]{2,}\\.\\w{2,5}\n",
+    "```\n",
+    "\n",
+    "\n",
+    "```python\n",
+    "-99.205646,19.429707,2275.10\n",
+    "-99.205581, 19.429652,2275.10\n",
+    "-99.204654,19.428952,2275.58\n",
+    "\n",
+    "# (\\-?\\d{1,3}\\.\\d{1,6},\\s?){2}  # TOMA SOLO LATITUD Y LONGITUD\n",
+    "# (\\-?\\d{1,3}\\.\\d{1,6},\\s?.*){2}  # TOMA TODO DESPUES DE LAT Y LOG\n",
+    "```"
    ]
   }
  ],
