--- a/init.ipynb
+++ b/init.ipynb
@@ -47,6 +47,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# GROUPS & REFERENCES\n",
+    "|Name|Sign|Description|\n",
+    "|---|---|---|\n",
+    "|`Capturin group`|(ABC)|Groups multiple tokens together and creates a capture group for extracting a substring or using a backreference.|\n",
+    "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# SUBSTITUTION\n",
+    "|Name|Sign|Description|\n",
+    "|---|---|---|\n",
+    "|`capture group`|$1|Inserts the results of the specified capture group. For example, $3 would insert the third capture group. **Relacionado con 'capturin group (ABC)', usado en el reemplazo**|\n",
+    "\n",
+    "\n",
+    "## Explicacion\n",
+    "### ver movier.dat y movies_result.dat\n",
+    "\n",
+    "```python\n",
+    "# ^\\d+::([\\w\\s\\,\\(\\)\\.\\'\\&\\!\\/]+)\\s\\((\\d{4,4})\\)::.*\n",
+    "# $1,$2 # Esto se coloca en el 'replace'\n",
+    "# INSET INTO movies (year, title) values ($2, '$1')\n",
+    "# {title: '$1', year:'$2'},\n",
+    " ```"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# EJEMPLOS\n",
     "``` python\n",
     "5556581111\n",
@@ -118,8 +152,46 @@
     "-99.205581, 19.429652,2275.10\n",
     "-99.204654,19.428952,2275.58\n",
     "\n",
+    "-99 12' 34.08\"W, 19 34' 56.98\"N\n",
+    "-34 54' 32.00\"E, -3 21' 67.00\"S\n",
+    "-19 12' 34.08\"E, -1 34' 16.00\"S\n",
+    "-32i4 54' 32.00\"E, -3 21' 67.00\"S\n",
+    "\n",
     "# (\\-?\\d{1,3}\\.\\d{1,6},\\s?){2}  # TOMA SOLO LATITUD Y LONGITUD\n",
     "# (\\-?\\d{1,3}\\.\\d{1,6},\\s?.*){2}  # TOMA TODO DESPUES DE LAT Y LOG\n",
+    "# ^\\-?\\d{1,3}\\s\\d{1,2}'\\s\\d{1,2}.\\d{2,2}\"[EW],\\s?\\-?\\d{1,3}\\s\\d{1,2}'\\s\\d{1,2}.\\d{2,2}\"[NS]$  # CON EWSN\n",
+    "```\n",
+    "\n",
+    "```python \n",
+    "fluido.recluta.volver\n",
+    "negó.cava.magia\n",
+    "\n",
+    "# ([a-zá-ú]{4,}\\.?){3}\n",
+    "```\n",
+    "\n",
+    "```python \n",
+    "Ayo Shi,\n",
+    "Nicky Marijn\n",
+    "Jamyang Badr.\n",
+    "Efemena Shani\n",
+    "Glaucia Huang\n",
+    "Rani Leslie\n",
+    "Leslie\n",
+    "Antonela\n",
+    "Glaucia Huan?g\n",
+    "\n",
+    "# ^[A-Z][a-z]{2,}\\s?[A-Z][a-z]{0,}$\n",
+    "```\n",
+    "\n",
+    "### SUSTITUCION\n",
+    "```python\n",
+    "https://b3co.com/?s=fotografia&mode=search&module=blog\n",
+    "https://www.google.com/search?q=regex+platzi&oq=regex+platzi&aqs=chrome..69i57j69i60.6885j0j9&sourceid=chrome&ie=UTF-8\n",
+    "https://co.search.yahoo.com/search?p=flickr&fr=yfp-t&fp=1&toggle=1&cop=mss&ie=UTF-8\n",
+    "\n",
+    "# \\??(\\w+=[\\w\\+\\.\\-\\%]+)&?\n",
+    "\n",
+    "# \\n- $1  # agregar esto en sustitucion, y separa los dominios de los get queries\n",
     "```"
    ]
   }
