--- a/INTERMEDIO/F_Queues.ipynb
+++ b/INTERMEDIO/F_Queues.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -61,6 +61,7 @@
      "output_type": "stream",
      "text": [
       "[4, 5, 6, 7, 8] []\n",
+      "4\n",
       "[] [8, 7, 6, 5]\n",
       "[] [8, 7, 6]\n",
       "[] [8, 7]\n"
@@ -77,12 +78,53 @@
     "data.enqueue(7)\n",
     "data.enqueue(8)\n",
     "print(data.inbound_stack, data.outbound_stack)\n",
-    "data.dequeue()\n",
+    "print(data.dequeue())\n",
     "print(data.inbound_stack, data.outbound_stack)\n",
-    "data.dequeue()\n",
+    "print(data.dequeue())\n",
     "print(data.inbound_stack, data.outbound_stack)\n",
-    "data.dequeue()\n",
+    "print(data.dequeue())\n",
     "print(data.inbound_stack, data.outbound_stack)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Queue basada en nodos\n",
+    "- Agregar y eliminar elementos son 0(1)\n",
+    "- Usando doubly linked list\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Popcorn\n",
+      "Milk Bread\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "from F_NodeBasedQueue import Queue\n",
+    "\n",
+    "data = Queue()\n",
+    "data.enqueue(\"Popcorn\")\n",
+    "data.enqueue(\"Bread\")\n",
+    "data.enqueue(\"Milk\")\n",
+    "print(data.head.data)\n",
+    "data.dequeue()\n",
+    "# print(data.head.data)\n",
+    "# data.dequeue()\n",
+    "# print(data.head.data)\n",
+    "print(data.tail.data, data.tail.previous.data)\n",
+    "print(data.count)"
    ]
   }
  ],
